force-app/main/default/objects/Team__c/Team__c.object-meta.xml
<CustomObject>
    <label>チーム</label>
    <nameField>
        <label>チーム名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>