force-app/main/default/objects/Team__c/fields/address_city__c.field-meta.xml
<CustomField>
    <fullName>address_city__c</fullName>
    <label>address_city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>