force-app/main/default/objects/Team__c/fields/franchise_code__c.field-meta.xml
<CustomField>
    <fullName>franchise_code__c</fullName>
    <label>franchise_code</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>