force-app/main/default/objects/Team__c/fields/league_full__c.field-meta.xml
<CustomField>
    <fullName>league_full__c</fullName>
    <label>league_full</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>