force-app/main/default/objects/Team__c/fields/league_id__c.field-meta.xml
<CustomField>
    <fullName>league_id__c</fullName>
    <externalId>true</externalId>
    <label>league_id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>