force-app/main/default/objects/Team__c/fields/name_display_full__c.field-meta.xml
<CustomField>
    <fullName>name_display_full__c</fullName>
    <label>name_display_full</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>