force-app/main/default/objects/Team__c/fields/sport_id__c.field-meta.xml
<CustomField>
    <fullName>sport_id__c</fullName>
    <externalId>true</externalId>
    <label>sport_id</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>