force-app/main/default/objects/Team__c/fields/store_url__c.field-meta.xml
<CustomField>
    <fullName>store_url__c</fullName>
    <label>store_url</label>
    <type>Url</type>
</CustomField>