force-app/main/default/objects/Team__c/fields/team_id__c.field-meta.xml
<CustomField>
    <fullName>team_id__c</fullName>
    <externalId>true</externalId>
    <label>team_id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>