force-app/main/default/objects/Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>team_id__c</columns>
    <columns>franchise_code__c</columns>
    <columns>venue_name__c</columns>
    <columns>name_display_full__c</columns>
    <columns>league_full__c</columns>
    <columns>league_id__c</columns>
    <columns>sport_id__c</columns>
    <columns>store_url__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>